include/constantine/curves/bls12_381.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(255)]; } bls12_381_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(381)]; } bls12_381_fp;
typedef struct { bls12_381_fp c[2]; } bls12_381_fp2;
typedef struct { bls12_381_fp x, y; } bls12_381_g1_aff;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_jac;
typedef struct { bls12_381_fp x, y, z; } bls12_381_g1_prj;
typedef struct { bls12_381_fp2 x, y; } bls12_381_g2_aff;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_jac;
typedef struct { bls12_381_fp2 x, y, z; } bls12_381_g2_prj;
void        ctt_big255_from_bls12_381_fr(big255* dst, const bls12_381_fr* src);
void        ctt_bls12_381_fr_from_big255(bls12_381_fr* dst, const big255* src);
ctt_bool    ctt_bls12_381_fr_unmarshalBE(bls12_381_fr* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bls12_381_fr_marshalBE(byte dst[], size_t dst_len, const bls12_381_fr* src) __attribute__((warn_unused_result));
secret_bool ctt_bls12_381_fr_is_eq(const bls12_381_fr* a, const bls12_381_fr* b);
secret_bool ctt_bls12_381_fr_is_zero(const bls12_381_fr* a);
secret_bool ctt_bls12_381_fr_is_one(const bls12_381_fr* a);
secret_bool ctt_bls12_381_fr_is_minus_one(const bls12_381_fr* a);
void        ctt_bls12_381_fr_set_zero(bls12_381_fr* a);
void        ctt_bls12_381_fr_set_one(bls12_381_fr* a);
void        ctt_bls12_381_fr_set_minus_one(bls12_381_fr* a);
void        ctt_bls12_381_fr_neg(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_neg_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_sum(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_add_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_diff(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_sub_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_double(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_double_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_prod(bls12_381_fr* r, const bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_mul_in_place(bls12_381_fr* a, const bls12_381_fr* b);
void        ctt_bls12_381_fr_square(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_square_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_div2(bls12_381_fr* a);
void        ctt_bls12_381_fr_inv(bls12_381_fr* r, const bls12_381_fr* a);
void        ctt_bls12_381_fr_inv_in_place(bls12_381_fr* a);
void        ctt_bls12_381_fr_ccopy(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_cswap(bls12_381_fr* a, bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_cset_zero(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cset_one(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cneg_in_place(bls12_381_fr* a, secret_bool ctl);
void        ctt_bls12_381_fr_cadd_in_place(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_bls12_381_fr_csub_in_place(bls12_381_fr* a, const bls12_381_fr* b, secret_bool ctl);
void        ctt_big381_from_bls12_381_fp(big381* dst, const bls12_381_fp* src);
void        ctt_bls12_381_fp_from_big381(bls12_381_fp* dst, const big381* src);
ctt_bool    ctt_bls12_381_fp_unmarshalBE(bls12_381_fp* dst, const byte src[], size_t src_len) __attribute__((warn_unused_result));
ctt_bool    ctt_bls12_381_fp_marshalBE(byte dst[], size_t dst_len, const bls12_381_fp* src) __attribute__((warn_unused_result));
secret_bool ctt_bls12_381_fp_is_eq(const bls12_381_fp* a, const bls12_381_fp* b);