constantine-rust/constantine-sys/src/bindings32.rs

#[test]
fn bindgen_test_layout_bls12_381_g1_aff() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g1_aff> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g1_aff>(),
        96usize,
        concat!("Size of: ", stringify!(bls12_381_g1_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g1_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g1_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bls12_381_g1_jac {
    x: bls12_381_fp,
    y: bls12_381_fp,
    z: bls12_381_fp,
}
#[test]
fn bindgen_test_layout_bls12_381_g1_jac() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g1_jac> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g1_jac>(),
        144usize,
        concat!("Size of: ", stringify!(bls12_381_g1_jac))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g1_jac>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g1_jac))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_jac),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_jac),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_jac),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bls12_381_g1_prj {
    x: bls12_381_fp,
    y: bls12_381_fp,
    z: bls12_381_fp,
}
#[test]
fn bindgen_test_layout_bls12_381_g1_prj() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g1_prj> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g1_prj>(),
        144usize,
        concat!("Size of: ", stringify!(bls12_381_g1_prj))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g1_prj>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g1_prj))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_prj),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_prj),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g1_prj),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bls12_381_g2_aff {
    x: bls12_381_fp2,
    y: bls12_381_fp2,
}
#[test]
fn bindgen_test_layout_bls12_381_g2_aff() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g2_aff> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g2_aff>(),
        192usize,
        concat!("Size of: ", stringify!(bls12_381_g2_aff))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g2_aff>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g2_aff))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_aff),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_aff),
            "::",
            stringify!(y)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bls12_381_g2_jac {
    x: bls12_381_fp2,
    y: bls12_381_fp2,
    z: bls12_381_fp2,
}
#[test]
fn bindgen_test_layout_bls12_381_g2_jac() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g2_jac> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g2_jac>(),
        288usize,
        concat!("Size of: ", stringify!(bls12_381_g2_jac))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g2_jac>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g2_jac))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_jac),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_jac),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_jac),
            "::",
            stringify!(z)
        )
    );
}
#[repr(C)]
#[derive(Copy, Clone)]
pub struct bls12_381_g2_prj {
    x: bls12_381_fp2,
    y: bls12_381_fp2,
    z: bls12_381_fp2,
}
#[test]
fn bindgen_test_layout_bls12_381_g2_prj() {
    const UNINIT: ::core::mem::MaybeUninit<bls12_381_g2_prj> = ::core::mem::MaybeUninit::uninit();
    let ptr = UNINIT.as_ptr();
    assert_eq!(
        ::core::mem::size_of::<bls12_381_g2_prj>(),
        288usize,
        concat!("Size of: ", stringify!(bls12_381_g2_prj))
    );
    assert_eq!(
        ::core::mem::align_of::<bls12_381_g2_prj>(),
        4usize,
        concat!("Alignment of ", stringify!(bls12_381_g2_prj))
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).x) as usize - ptr as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_prj),
            "::",
            stringify!(x)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).y) as usize - ptr as usize },
        96usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_prj),
            "::",
            stringify!(y)
        )
    );
    assert_eq!(
        unsafe { ::core::ptr::addr_of!((*ptr).z) as usize - ptr as usize },
        192usize,
        concat!(
            "Offset of field: ",
            stringify!(bls12_381_g2_prj),
            "::",
            stringify!(z)
        )
    );
}
extern "C" {
    pub fn ctt_big255_from_bls12_381_fr(dst: *mut big255, src: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_from_big255(dst: *mut bls12_381_fr, src: *const big255);
}
extern "C" {
    #[must_use]
    pub fn ctt_bls12_381_fr_unmarshalBE(
        dst: *mut bls12_381_fr,
        src: *const byte,
        src_len: usize,
    ) -> bool;
}
extern "C" {
    #[must_use]
    pub fn ctt_bls12_381_fr_marshalBE(
        dst: *mut byte,
        dst_len: usize,
        src: *const bls12_381_fr,
    ) -> bool;
}
extern "C" {
    pub fn ctt_bls12_381_fr_is_eq(a: *const bls12_381_fr, b: *const bls12_381_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fr_is_zero(a: *const bls12_381_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fr_is_one(a: *const bls12_381_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fr_is_minus_one(a: *const bls12_381_fr) -> secret_bool;
}
extern "C" {
    pub fn ctt_bls12_381_fr_set_zero(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_set_one(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_set_minus_one(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_neg(r: *mut bls12_381_fr, a: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_neg_in_place(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_sum(
        r: *mut bls12_381_fr,
        a: *const bls12_381_fr,
        b: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fr_add_in_place(a: *mut bls12_381_fr, b: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_diff(
        r: *mut bls12_381_fr,
        a: *const bls12_381_fr,
        b: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fr_sub_in_place(a: *mut bls12_381_fr, b: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_double(r: *mut bls12_381_fr, a: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_double_in_place(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_prod(
        r: *mut bls12_381_fr,
        a: *const bls12_381_fr,
        b: *const bls12_381_fr,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fr_mul_in_place(a: *mut bls12_381_fr, b: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_square(r: *mut bls12_381_fr, a: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_square_in_place(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_div2(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_inv(r: *mut bls12_381_fr, a: *const bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_inv_in_place(a: *mut bls12_381_fr);
}
extern "C" {
    pub fn ctt_bls12_381_fr_ccopy(a: *mut bls12_381_fr, b: *const bls12_381_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fr_cswap(a: *mut bls12_381_fr, b: *mut bls12_381_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fr_cset_zero(a: *mut bls12_381_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fr_cset_one(a: *mut bls12_381_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fr_cneg_in_place(a: *mut bls12_381_fr, ctl: secret_bool);
}
extern "C" {
    pub fn ctt_bls12_381_fr_cadd_in_place(
        a: *mut bls12_381_fr,
        b: *const bls12_381_fr,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_bls12_381_fr_csub_in_place(
        a: *mut bls12_381_fr,
        b: *const bls12_381_fr,
        ctl: secret_bool,
    );
}
extern "C" {
    pub fn ctt_big381_from_bls12_381_fp(dst: *mut big381, src: *const bls12_381_fp);
}
extern "C" {
    pub fn ctt_bls12_381_fp_from_big381(dst: *mut bls12_381_fp, src: *const big381);
}
extern "C" {
    #[must_use]
    pub fn ctt_bls12_381_fp_unmarshalBE(
        dst: *mut bls12_381_fp,
        src: *const byte,
        src_len: usize,
    ) -> bool;
}
extern "C" {
    #[must_use]
    pub fn ctt_bls12_381_fp_marshalBE(
        dst: *mut byte,
        dst_len: usize,
        src: *const bls12_381_fp,
    ) -> bool;
}
extern "C" {
    pub fn ctt_bls12_381_fp_is_eq(a: *const bls12_381_fp, b: *const bls12_381_fp) -> secret_bool;
}
